# aula17_python_sqlalchemy

./: README.md  desafio.py  desafio_query.py  exemplo_01.py  meubanco.db  pyproject.toml
