[project]
name = "aula17-python-sqlalchemy"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Pallisser de Oliveira",email = "rafaelpallisser@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
